icon and logo edited

--- a/Arcade Jump/Arcade Jump.vcxproj.filters
+++ b/Arcade Jump/Arcade Jump.vcxproj.filters
@@ -41,13 +41,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PPCD.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="all_headers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -62,7 +62,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Icon.ico">
+    <Image Include="Graphics\Icon.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
