--- a/Arcade Jump/Arcade Jump.vcxproj
+++ b/Arcade Jump/Arcade Jump.vcxproj
@@ -165,7 +165,7 @@
     <ResourceCompile Include="Arcade Jump.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Icon.ico" />
+    <Image Include="Graphics\Icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
